--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <div class="container">
         <h1>Blackjack</h1>
         <p id="mess-error">Want to play around?</p>
-        <p>Cards:</p>
-        <p>Sum:</p>
+        <p id="card-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
         <button id="btn" onclick="srtGame()">START GAME</button>
+        <button onclick="newCard()">NEW CARD</button>
     </div>
 
     <script src="script.js"></script>
